--- a/src/lightbox.css
+++ b/src/lightbox.css
@@ -4,8 +4,12 @@ body:after {
   display: none;
 }
 
-body.lb-disable-scrolling {
+html.lb-disable-scrolling {
   overflow: hidden;
+  /* Position fixed required for iOS. Just putting overflow: hidden; on the body is not enough. */
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
 }
 
 .lightboxOverlay {
