Use .lb-image to avoid css leaking
That style was leaking to another components so I encapsulated it inside .lb-image class.

--- a/src/lightbox.css
+++ b/src/lightbox.css
@@ -361,7 +361,7 @@ html.lb-disable-scrolling {
   transition-timing-function: ease;
 }
 
-img {
+.lb-image {
   -webkit-transition-duration: 0.5s;
       -moz-transition-duration: 0.5s;
       -o-transition-duration: 0.5s;
