--- a/src/lightbox.css
+++ b/src/lightbox.css
@@ -31,6 +31,14 @@ html.lb-disable-scrolling {
   border-radius: 3px;
 }
 
+.lightbox .lb-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .lightbox a img {
   border: none;
 }
@@ -81,6 +89,16 @@ html.lb-disable-scrolling {
   z-index: 10;
 }
 
+.lb-iframe ~ .lb-nav {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 45px;
+  width: 100%;
+  z-index: 10;
+  transform: translateY(-50%);
+}
+
 .lb-container > .nav {
   left: 0;
 }
@@ -109,6 +127,10 @@ html.lb-disable-scrolling {
   transition: opacity 0.6s;
 }
 
+.lb-iframe ~ .lb-nav a.lb-prev {
+  width: 55px;
+}
+
 .lb-nav a.lb-prev:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -125,6 +147,10 @@ html.lb-disable-scrolling {
   -moz-transition: opacity 0.6s;
   -o-transition: opacity 0.6s;
   transition: opacity 0.6s;
+}
+
+.lb-iframe ~ .lb-nav a.lb-next {
+  width: 55px;
 }
 
 .lb-nav a.lb-next:hover {
