fix: Css typo fix ( *zoom:1 ) changed to (zoom:1)

--- a/src/lightbox.css
+++ b/src/lightbox.css
@@ -37,7 +37,7 @@ html.lb-disable-scrolling {
 
 .lb-outerContainer {
   position: relative;
-  *zoom: 1;
+  zoom: 1;
   width: 250px;
   height: 250px;
   margin: 0 auto;
